samples/_failures_safe/1761660908_1a6e3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34f738be.c: In function ‘main’:
./samples/SAFE/__tmp_34f738be.c:165:11: error: expected ‘;’ at end of input
  165 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_34f738be.c:165:5: error: expected declaration or statement at end of input
  165 |     printf
      |     ^~~~~~
